--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,21 @@
 
 /* Your CSS Code here. */
+.container {
+  text-align: center;
+}
+
+.moviePic {
+  height: 400px;
+  width: auto;
+  opacity: 0.9;
+}
+
+.movieDetail {
+  position: relative;
+  top: 50%;
+  width: 70%;
+  text-align: center;
+  font-size: 18px;
+  margin: auto;
+  /* transform: translateY(-50%); */
+}
